Bot_V2/src/objects/UserBotMessage__c.object
<CustomObject>
    <description>The record to be saved when the user submits a message</description>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The id of the attached file</description>
        <label>ContentDocumentId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The message entered in the input</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SentFrom__c</fullName>
        <description>The URL from where the user submitted the message</description>
        <label>SentFrom</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who submitted the message</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserBotMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserBotMessage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Submitter__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserBotMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>